--- a/.env.example
+++ b/.env.example
@@ -52,4 +52,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 WP_API_USER="webminster"
-WP_API_PW="rVIR uEFb sj60 0ZtV eW8C JCEc"
+WP_API_PW="l2KP UU2G Su5w i1mw 5lzP LWSc"
+
+WP_API_ENTRY_URL="https://www.jacto.com/api/v1/products?market=1"
+WP_API_DESTINY_URL="https://agromaq.webminster.app/wp-json/wp/v2/posts"
